--- a/conf/janus.jcfg.sample.in
+++ b/conf/janus.jcfg.sample.in
@@ -261,6 +261,8 @@ nat: {
 	# If you'd rather keep the private IP address in place, rather than
 	# replacing it (and so have both of them as advertised candidates),
 	# then set the 'keep_private_host' property to true.
+	# If the config value doesn't have the format of an IP address,
+	# Janus will perform a DNS lookup at startup to resolve the name to an IP.
 	#nat_1_1_mapping = "1.2.3.4"
 	#keep_private_host = true
 
